<resources>
    <string name="app_name">Training Assistant</string>
    <string name="profile">Profil</string>
    <string name="training">Mój Trening</string>
    <string name="excercises">Ćwiczenia</string>
    <string name="health">Twórcy</string>
    <string name="about">Statystyki</string>
    <string name="top_text">ORGANIZER TRENINGOWY</string>
    <string name="profile_text">Imię</string>
    <string name="profile_text2">nazwisko</string>
    <string name="Male">Mężczyzna</string>
    <string name="Female">Kobieta</string>
    <string name="age">Wiek:</string>
    <string name="how_many" translatable="false">0</string>
    <string name="weight">Waga(kg):</string>
    <string name="how_many_kg" translatable="false">0</string>
    <string name="height">Wzrost(cm):</string>
    <string name="how_many_cm" translatable="false">0</string>
    <string name="button_edit">Edytuj</string>
    <string name="choose_gender">Płeć:</string>
    <string name="gender" translatable="false">none</string>
    <string name="Edit_name">Imię</string>
    <string name="Edit_surname">Nazwisko</string>
    <string name="Edit_weight">Waga</string>
    <string name="Edit_height">Wzrost</string>
    <string name="Edit_age">Wiek</string>
    <string name="button_save">Zapisz</string>
    <string name="excercise_name">Nazwa ćwiczenia</string>
    <string name="finish_training">Zakończ</string>
    <string name="comment">Notatki</string>
    <string name="kgs">Obciążenie</string>
    <string name="sets">Ćwiczenie</string>
    <string name="reps">Powtórzenia</string>
    <string name="add">Dodaj</string>
    <string name="series">Serie</string>
    <string name="SharedPrefsLog" translatable="false">LogiDoSzared</string>
    <string name="addedCorrectly">Ćwiczenie dodane poprawnie.</string>
    <string name="editedCorrectly">Pomyślnie edytowałeś ćwiczenie.</string>
    <string name="changesNotSaved">Nie zapisałeś zmian :/</string>
    <string name="failed">Nie uzupełniłeś wszystkich pól :(</string>
    <string name="deleted_correctly">Pomyślnie usunięto ćwiczenie</string>
    <string name="how_many_trainings">Ilość odbytych treningów:</string>
    <string name="No_notes_detected">Brak notatek</string>
    <string name="LastNotes">Notatki z ostatniego treningu</string>
    <string name="ABS">Brzuch</string>
    <string name="back">Plecy</string>
    <string name="legs">Nogi</string>
    <string name="shoulders">Barki</string>
    <string name="chest">Klatka</string>
    <string name="arms">Ręce</string>
    <string name="ShouldersOne" translatable="false">Wyciskanie sztangi zza/sprzed głowy</string>
    <string name="ShouldersOneMuscle" translatable="false">Przedni i boczne aktony mięśni naramiennych, mięśnie trójgłowe ramion.</string>
    <string name="ShouldersOneDesc" translatable="false">Stajemy w rozkroku nieco szerszym niż barki - klatka piersiowa wypchnięta ku przodowi, zachowana naturalna krzywizna kręgosłupa-pracują podczas ćwiczenia tylko ramiona i barki staramy się unikać dodatkowych ruchów tułowia i nóg), uchwyt nieco szerszy niż rozstaw barków</string>
    <string name="ShouldersTwo" translatable="false">Unoszenie sztangielek bokiem w górę.</string>
    <string name="ShouldersTwoMuscle" translatable="false">Środkowe aktony mięśni naramiennych</string>
    <string name="ShouldersTwoDesc" translatable="false">Ćwiczenie można wykonywać w pozycji stojącej lub siedzącej,oburącz lub jednorącz. W pozycji wyjściowej tułów lekko pochylony ręce ze sztangielkami nieco ugięte w łokciach, opuszczone w dół, dłonie wewnętrznymi stronami skierowane do środka. Ruch unoszenia rozpoczynamy przy ugiętych rękach  łokcie w każdej fazie ruchu wyprzedzają dłonie. Sztangielki unosimy powyżej linii barków i bez zatrzymania opuszczamy powoli w dół (lub przytrzymujemy w pozycji szczytowej przez chwilę w celu dodatkowego napięcia mięśni). Ćwiczenie to można również wykonywać jednorącz sztangielką/linką na wyciągu w odchyleniu - jedną ręką chwytamy się poręczy, drugą wykonujemy ćwiczenie.</string>
    <string name="ShouldersThree" translatable="false">Unoszenie sztangielek w opadzie tułowia</string>
    <string name="ShouldersThreeMuscle" translatable="false">tylna część mięśni naramiennych</string>
    <string name="ShouldersThreeDesc" translatable="false">Tułów ustawiamy w położeniu zbliżonym do prostopadłego do podłoża i staramy się w trakcie ruchu nie wykonywać nim tzw. bujania - utrzymujemy możliwie sztywno. Z pozycji wyjściowej ruchem kolistym unosimy sztangielki maksymalnie w górę, utrzymując przez cały czas ćwiczone mięśnie w stanie napięcia. Staramy się, aby w ruchu powrotnym sztangielki poruszały się po tym samym torze. W pozycji szczytowej można przytrzymać przez chwilę sztangielki w celu dodatkowego napięcia mięśni.</string>
    <string name="ShouldersFour" translatable="false">Podciąganie sztangi wzdłuż tułowia</string>
    <string name="ShouldersFourMuscle" translatable="false">Wszystkie aktony mięśni naramiennych, mięsień czworoboczny grzbietu (tzw. kapturowy).</string>
    <string name="ShouldersFourDesc" translatable="false">Rozkrok nieco szerszy od rozstawu barków, uchwyt na szerokość ramion. Ruchem wolnym i kontrolowanym unosimy sztangę w kierunku brody, starając się, aby przemieszczała się możliwie najbliżej tułowia. Łokcie przez cały czas trzymamy powyżej gryfu sztangi. Ruch unoszenia kończymy, gdy sztanga znajdzie się na wysokości klatki piersiowej (lub staramy się podciągnąć sztangę aż do brody), opuszczamy również powoli, unikamy odchylania i bujania tułowia. Koncentrujemy się na unoszeniu łokci, a sztanga podąży za nimi.</string>
    <string name="ChestOne" translatable="false">Wyciskanie sztangi w leżeniu na ławce poziomej</string>
    <string name="ChestOneMuscle" translatable="false">Cała grupa mięśni klatki piersiowej, mięśnie trójgłowe ramion, przednie aktony mięśni naramiennych.</string>
    <string name="ChestOneDesc" translatable="false">Opuszczamy sztangę na klatkę na wysokość ok.1 cm powyżej brodawek. Przy opuszczaniu sztangi wykonujemy głęboki wdech - wydychamy powietrze w trakcie wyciskania. Można okresowo praktykować przytrzymywanie sztangi przez chwilę na klatce przed wyciśnięciem. Łokcie prowadzimy w trakcie całego ruchu po bokach - tak, by nie „uciekały” do środka. Ruch wyciskania kończymy (dla lepszego napięcia mięśni) zanim łokcie zostaną zblokowane.</string>
    <string name="ChestTwo" translatable="false">Wyciskanie sztangi w leżeniu na ławce skośnej</string>
    <string name="ChestTwoMuscle" translatable="false">Cała grupa mięśni klatki piersiowej z podkreśleniem jej górnej części, mięśnie trójgłowe ramion, przednie aktony mięśni naramiennych.</string>
    <string name="ChestTwoDesc" translatable="false">Uchwyt sztangi, oddychanie, prowadzenie łokci, jak w ćwiczeniu na ławce płaskiej.</string>
    <string name="ChestThree" translatable="false">Rozpiętki ze sztangielkami w leżeniu na ławce poziomej</string>
    <string name="ChestThreeMuscle" translatable="false">Mięsień piersiowy większy.</string>
    <string name="ChestThreeDesc" translatable="false">Ćwiczenie rozpoczynamy z ramionami wyprostowanymi - prostopadłymi do podłoża (palce dłoni skierowane są do siebie), a w trakcie ruchu lekko uginamy je w łokciach. Nabieramy powietrza, gdy sztangielki są u góry (na początku ruchu), wydychamy je, gdy sztangielki wędrują do góry. W końcowej fazie ruch można zatrzymać na chwilę w celu lepszego napięcia mięśni. Staramy się nie uderzać sztangielkami o siebie, ale zatrzymywać ruch zanim się zetkną. Ważne jest wykonywanie pełnego zakresu ruchu.</string>
    <string name="ChestFour" translatable="false">Pompki na poręczach</string>
    <string name="ChestFourMuscle" translatable="false">Cała grupa mięśni klatki piersiowej.</string>
    <string name="ChestFourDesc" translatable="false">W tym ćwiczeniu ważne jest, by pracę wykonywały w głównym stopniu mięśnie piersiowe, w mniejszym stopniu chodzi nam o pracę mięśni trójgłowych ramion. Elementem decydującym o większym zaangażowaniu jednych, bądź drugich mięśni jest pozycja tułowia i ułożenie łokci.</string>
    <string name="BackOne" translatable="false">Podciąganie na drążku szerokim uchwytem (nachwyt)</string>
    <string name="BackOneMuscle" translatable="false">Mięśnie najszersze grzbietu.</string>
    <string name="BackOneDesc" translatable="false">Chwytamy drążek nachwytem na szerokość taką, by po podciągnięciu ramiona z przedramionami tworzyły kąt prosty (w przybliżeniu). Nogi ugięte w kolanach (dla lepszej stabilności można je spleść). Łokcie pracują w płaszczyźnie pleców - w jednej linii. Wdech robimy przed rozpoczęciem ruchu podciągania - wydech dopiero, gdy jesteśmy już u góry. Ruch podciągania kończymy w momencie, gdy nasza broda jest na wysokości drążka lub nieco ponad nim. Opuszczamy się wolno i pod pełną kontrolą.</string>
    <string name="BackTwo" translatable="false">Skłony ze sztangą trzymaną na karku</string>
    <string name="BackTwoMuscle" translatable="false">Prostowniki grzbietu, dwugłowe ud, pośladkowe.</string>
    <string name="BackTwoDesc" translatable="false">Stajemy w rozkroku nieco większym niż szerokość barków. Sztangę kładziemy na górnej części mięśni czworobocznych grzbietu. Głowa lekko wygięta do tyłu, ale bez przesady - zbytnie wyginanie głowy może być przyczyną kontuzji. Tułów wyprostowany, klatka piersiowa wypchnięta ku przodowi, łopatki ściągnięte do siebie. Nogi lekko ugięte w kolanach przez cały czas trwania ćwiczenia. Z takiej pozycji wykonujemy skłon do pozycji zbliżonej do poziomego ułożenia tułowia względem podłogi. Bez zatrzymania, ale nie szarpiąc unosimy tułów do pozycji wyjściowej. Ruch powinien być płynny i kontrolowany.</string>
    <string name="BackThree" translatable="false">Martwy ciąg</string>
    <string name="BackThreeMuscle" translatable="false">Prostowniki grzbietu, mięśnie najszersze grzbietu.</string>
    <string name="BackThreeDesc" translatable="false">Stajemy przodem do sztangi, w rozkroku na szerokość barków lub nieco szerszym, nogi lekko ugięte w kolanach, gryf sztangi nad palcami stóp, sztangę chwytamy nachwytem, nieco szerzej niż barki. Klatka wypchnięta ku przodowi, tułów wyprostowany, głowa lekko zadarta do góry. Ćwiczenie polega na unoszeniu sztangi w górę poprzez prostowanie nóg i wyprost tułowia. Ruch kończymy przy pełnym wyproście tułowia - nie odchylamy go do tyłu - grozi to kontuzją. Nie wolno również dopuszczać do tzw. ”kociego grzbietu”, czyli wygięcia pleców w łuk (szczególnie w dolnym odcinku). Powrót do pozycji wyjściowej zaczynamy od lekkiego ugięcia nóg w kolanach, a następnie pochylamy tułów (oczywiście cały czas jest on wyprostowany) robiąc skłon. Nie pochylamy się jednak zbyt nisko. Ruch opuszczania ciężaru wolny i kontrolowany - sztanga nie uderza o podłogę, ale dotyka jej.</string>
    <string name="ArmsOne" translatable="false">Uginanie ramion ze sztangą stojąc podchwytem</string>
    <string name="ArmsOneMuscle" translatable="false">Obie głowy mięsnia zaangażowane w równym stopniu.</string>
</resources>