<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".StartTrainingActivity">



    <com.google.android.material.circularreveal.cardview.CircularRevealCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/custom_cardview_background">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

               <Button
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="end|center"
                   android:layout_marginEnd="@dimen/small_padding"
                   android:background="@android:color/transparent"
                   android:text="@string/finish_training"/>


            </LinearLayout>
        </RelativeLayout>

    </com.google.android.material.circularreveal.cardview.CircularRevealCardView>


   <EditText
       android:id="@+id/edit_text_training_start"
       android:layout_width="match_parent"
       android:layout_height="@dimen/kmdimen"
       android:text="@string/comment"
       android:layout_marginTop="@dimen/size"
       android:layout_marginStart="@dimen/kmdimen"
       android:layout_marginEnd="@dimen/kmdimen"
       android:background="@color/cardview_shadow_start_color"/>


    <TextView
        android:id="@+id/start_training_item_name_ex"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/size"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_top_size"
        android:paddingStart="@dimen/kmdimen"
        android:textColor="@color/floating_button"
        android:text="@string/excercise_name"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/padding"
        android:paddingStart="@dimen/kmdimen"
        android:layout_marginBottom="@dimen/small_padding">

        <TextView
            android:id="@+id/series"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/padding"
            android:textSize="@dimen/text_top_size"
            android:text="@string/sets" />

        <TextView
            android:id="@+id/kgs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_top_size"
            android:paddingEnd="@dimen/padding"
            android:text="@string/kgs"/>

        <TextView
            android:id="@+id/reps"
            android:layout_width="wrap_content"
            android:textSize="@dimen/text_top_size"
            android:layout_height="wrap_content"
            android:text="@string/reps"/>


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/kmdimen">

    </androidx.recyclerview.widget.RecyclerView>
</LinearLayout>