<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewSeries">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/excercise_list_start">

        <EditText
            android:id="@+id/nameofexcercise"
            android:layout_width="@dimen/lindear_under_background"
            android:layout_height="match_parent"
            android:inputType="textCapWords"
            android:layout_gravity="center"
            android:hint="@string/excercise_name" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/obciazenie_id"
            android:layout_width="@dimen/lindear_under_background"
            android:hint="@string/kgs"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <EditText
            android:id="@+id/powtorzenia_id"
            android:layout_width="@dimen/lindear_under_background"
            android:layout_marginTop="@dimen/small_padding"
            android:hint="@string/reps"
            android:layout_height="match_parent"
            android:layout_gravity="center" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <EditText
            android:id="@+id/series_id"
            android:layout_width="@dimen/lindear_under_background"
            android:layout_marginTop="@dimen/small_padding"
            android:hint="@string/series"
            android:layout_height="match_parent"
            android:layout_gravity="center" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_save_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:layout_marginTop="@dimen/padding"
        android:background="@drawable/my_button"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_save"/>
    </LinearLayout>

</ScrollView>

</LinearLayout>