<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/small_padding"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/nameofexcercise_rvitem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/small_padding"
            android:hint="@string/excercise_name"/>

        <TextView
            android:id="@+id/how_many_kg_rvitem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/small_padding"
            android:hint="@string/kgs" />

        <TextView
            android:id="@+id/how_many_reps_rvitem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/small_padding"
            android:hint="@string/reps"/>

        <Switch
            android:id="@+id/switch_rv"
            android:layout_marginStart="@dimen/small_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/small_padding"
        android:layout_marginEnd="@dimen/padding"
        android:background="@color/ButoonsColor"/>

</LinearLayout>